--- a/src/Styles/tailwind.css
+++ b/src/Styles/tailwind.css
@@ -7,13 +7,8 @@
   src: url("https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap");
 }
 
-@keyframes spin {
-  from {
-    transform: rotate(-12deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+main{
+  padding-top: 64px;
 }
 
 #earth-container {
